# CoachDiary-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
CoachDiary_Backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
CoachDiary_Backend/api/: urls.py
CoachDiary_Backend/api/utils/: exception_handler.py
CoachDiary_Backend/management/commands/: create_oauth_app.py  create_test_data.py  delete_oauth_app.py  list_oauth_apps.py
CoachDiary_Backend/settings/: apps.py  auth.py  celery.py  cors.py  email.py  general.py  locale.py  rest_framework.py  settings.py
CoachDiary_Backend/templates/: change_password_email.html  qr_codes_template.html  style.css  verification_email.html
coachdiary/settings/: general.py
common/: excel_utils.py  models.py  permissions.py  utils.py  validators.py
standards/: apps.py  models.py  signals.py
standards/api/: serializers.py  urls.py  views.py
students/: apps.py  models.py  signals.py
students/api/: filters.py  serializers.py  urls.py  views.py
users/: models.py  signals.py  tasks.py  utils.py
users/api/: serializers.py  urls.py  views.py
