[tool.poetry]
name = "coachdiary-backend"
version = "0.1.0"
description = ""
authors = ["AaronVanguard <demidov.03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
