[tool.poetry]
name = "coachdiary-backend"
version = "0.1.0"
description = ""
authors = ["screenviolence <demidov.03.md@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
drf-spectacular = "^0.28.0"
django-cors-headers = "^4.7.0"
django-extensions = "^4.0"
django-soft-delete = "^1.0.18"
djangorestframework-simplejwt = "^5.5.0"
django-filter = "^25.1"
djangorestframework-oauth = "^1.1.0"
django-oauth-toolkit = "^3.0.1"
django-templated-mail = "^1.1.1"
qrcode = "^8.1"
reportlab = "^4.4.0"
pillow = "^11.2.1"
fpdf2 = "^2.8.2"
xhtml2pdf = "^0.2.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
